[package]
name = "redis"
version = "0.5.2"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["redis", "database"]
description = "Redis driver for Rust."
homepage = "https://github.com/mitsuhiko/redis-rs"
documentation = "http://mitsuhiko.github.io/redis-rs/"
license = "BSD-3-Clause"
readme = "README.md"

#[dependencies.sha1]
#git = "https://github.com/mitsuhiko/rust-sha1.git"
#
#[dependencies.url]
#git = "https://github.com/servo/rust-url"

[dependencies]
core_rustc-serialize = "0.3.20-v0.3.19patch1"
core_collections = "0.3"

[dev-dependencies]
unix_socket = "0.5"
